BaSP-W07-2022: Replace inputs ID in sign up to match the API ids and fix an alignment problem in css

--- a/Semana-07/css/sign-up.css
+++ b/Semana-07/css/sign-up.css
@@ -44,6 +44,10 @@ form div {
   gap: 10px;
 }
 
+#redirection-container a {
+  text-align: center;
+}
+
 input[type="text"],
 input[type="password"],
 input[type="date"] {
